# verkle-tree

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: workflow.yml
bandersnatch/: CMakeLists.txt
bandersnatch/bandersnatch/: Bandersnatch.cpp  Bandersnatch.h  BandersnatchUtility.cpp  BandersnatchUtility.h  Element.cpp  Element.h  Fr.cpp  Fr.h  PrecomputedElements.cpp  PrecomputedElements.h
bandersnatch/src/: Element.h  Fr.cpp  Fr.h
bandersnatch/src/Element/: Element.cpp  Element.h
bandersnatch/test/: CMakeLists.txt
bandersnatch/test/unittests/: Common.h  Constants.h  ElementTest.cpp  FrTest.cpp  PrecomputedElementsTest.cpp
cmake/: Options.cmake  ProjectBLST.cmake  ProjectBoost.cmake  config.cmake
common/: CMakeLists.txt
common/common/: Common.cpp  Common.h
ipa/: CMakeLists.txt  CMakelists.txt
ipa/ipa/: IPAConfig.cpp  IPAConfig.h  IPAProof.cpp  IPAProof.h  IPAUtility.cpp  IPAUtility.h  PrecomputedFrs.cpp  PrecomputedFrs.h  PrecomputedMSM.cpp  PrecomputedMSM.h  PrecomputedWeights.cpp  PrecomputedWeights.h  Transcript.cpp  Transcript.h
ipa/test/: CMakeLists.txt  CMakelists.txt  IPAProofTest.cpp  PrecomputedFrsTest.cpp  TranscriptTest.cpp  Utility.cpp  Utility.h  main.cpp
utilities/: CMakeLists.txt  CMakelists.txt
utilities/testutils/: TestPromptFixture.h
utilities/verkleutils/: Hash.cpp  Hash.h
utility/: CMakelists.txt
utility/testutils/: TestPromptFixture.h
verkle-cmake-scripts/: HunterGate.cmake
